# tabularis-mongodb-plugin

./: .tabularium  Cargo.toml  LICENSE  README.md  manifest.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  error.rs  main.rs  models.rs  rpc.rs  runtime.rs
src/handlers/: crud.rs  ddl.rs  metadata.rs  mod.rs  query.rs
src/utils/: bsonjson.rs  connstr.rs  mod.rs  pagination.rs  query_parse.rs  sqlwhere.rs  typeinfer.rs
