[package]
name = "tabularis-mongodb-plugin"
version = "0.1.0"
edition = "2021"
description = "Tabularis driver plugin for MongoDB (6.0+)"
license = "Apache-2.0"
publish = false

[dependencies]
serde_json = "1"
bson = "3"
regex = "1"
# default-features off to drop the bson-2 compat shim; we use bson 3 so the
# `bson` crate and `mongodb`'s re-exported bson are the same types.
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "dns-resolver", "bson-3", "compat-3-3-0"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "sync"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
